# ithappens

./: .gitignore  .gitmodules  CHANGELOG.md  Dockerfile  README.md  card.py  create_cards.py  environment.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  shithappens.spec  show.py  utils.py
.devcontainer/: devcontainer.json
.github/: FUNDING.yml
.github/workflows/: ci-cd.yml  ci_testpypi.yml  docker.yml
.streamlit/: config.toml
examples/example/: example.csv  example.xlsx  example.yaml
notebooks/: 1-sj-fit-text-to-shape.ipynb  image-generation.ipynb
src/app/: main.py
src/ithappens/: __init__.py  card.py  create_cards.py  exceptions.py  sort_situations.py  utils.py
src/ithappens/cli/: __init__.py  utils.py
src/ithappens/style/fonts/: __init__.py  manage.py
src/ithappens/style/styles/: ithappens.mplstyle  registration.py
src/shithappens/: __init__.py  card.py  create_cards.py  sort_situations.py  utils.py
src/shithappens/cli/: __init__.py  utils.py
src/shithappens/locales/en/LC_MESSAGES/: shithappens.po
src/shithappens/locales/nl/LC_MESSAGES/: shithappens.po
src/shithappens/style/fonts/: __init__.py
src/shithappens/style/styles/: registration.py  shithappens.mplstyle
