[build-system]
requires = ["setuptools>=61.0", "babel"]
build-backend = "setuptools.build_meta"

[project]
name = "shithappens"
version = "2.5.9"
authors = [
    {name="Siem de Jong"},
]
description = "Create your own Shit Happens playing cards!"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib",
    "pandas",
    "openpyxl", # For pandas to open excel files.
]
license = {file = "LICENSE"}
keywords = ["shit happens", "card-game"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Matplotlib",
    "Intended Audience :: Developers",
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    'Programming Language :: Python :: 3 :: Only',
    "Programming Language :: Python :: 3.11",
    "Topic :: Games/Entertainment :: Board Games",
    "Typing :: Typed",
]

[project.urls]
"Homepage" = "https://github.com/siemdejong/shit-happens"
"Bug Tracker" = "https://github.com/siemdejong/shit-happens/issues"

[project.scripts]
shithappens = "shithappens.create_cards:main_cli"

[project.optional-dependencies]
pbar = ["tqdm"]
merge = ["PyPDF2"]
all = ["tqdm", "PyPDF2"]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["shithappens.opensans"]
namespaces = false

[tool.setuptools.package-data]
shithappens = ["opensans/fonts/ttf/*.ttf", "images/*.png", "locales/*/LC_MESSAGES/*.mo"]

[tool.semantic_release]
version_variable = "pyproject.toml:version" # version location
branch = "main"                             # branch to make releases of
changelog_file = "CHANGELOG.md"             # changelog file
build_command = "python -m build" # build dists
dist_path = "dist/"                         # where to put dists
dist_glob_patterns = ["*.whl", "*.tar.gz", "*.zip"]
upload_to_release = true                    # auto-create GitHub release
upload_to_pypi = false                      # don't auto-upload to PyPI
remove_dist = false                         # don't remove dists
patch_without_tag = true                    # patch release by default
